## uncommitted

- Add automatic inclusion of default domain encoders
- Allow dynamic CSS dependencies for Visualizers
- Add MFA table visualizer